--- a/sources/_VS/Loader53/Loader53.vcxproj
+++ b/sources/_VS/Loader53/Loader53.vcxproj
@@ -125,7 +125,7 @@
     <ClCompile Include="..\..\libs\common\Display\Painter.cpp" />
     <ClCompile Include="..\..\libs\common\Display\PainterText.cpp" />
     <ClCompile Include="..\..\libs\common\Hardware\CPU_VCP.cpp" />
-    <ClCompile Include="..\..\libs\common\Hardware\stm32\207\Timer207.cpp" />
+    <ClCompile Include="..\..\libs\common\Hardware\stm32\2XX\Timer2XX.cpp" />
     <ClCompile Include="..\..\libs\common\Hardware\Timer.cpp" />
     <ClCompile Include="..\..\libs\common\S8-53\Hardware\Controls.cpp" />
     <ClCompile Include="..\..\libs\common\Utils\Math.cpp" />
@@ -238,7 +238,7 @@
     <ClInclude Include="..\..\libs\common\Display\Colors.h" />
     <ClInclude Include="..\..\libs\common\Display\Painter.h" />
     <ClInclude Include="..\..\libs\common\Hardware\CPU_VCP.h" />
-    <ClInclude Include="..\..\libs\common\Hardware\stm32\207\Timer207.h" />
+    <ClInclude Include="..\..\libs\common\Hardware\stm32\2XX\Timer2XX.h" />
     <ClInclude Include="..\..\libs\common\Hardware\Timer.h" />
     <ClInclude Include="..\..\libs\common\S8-53\Hardware\Controls.h" />
     <ClInclude Include="..\..\libs\common\stub.h" />
