--- a/sources/Device53/Device53.uvprojx
+++ b/sources/Device53/Device53.uvprojx
@@ -5166,19 +5166,9 @@
               <FilePath>.\src\Hardware\ADC.cpp</FilePath>
             </File>
             <File>
-              <FileName>ADC.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Hardware\ADC.h</FilePath>
-            </File>
-            <File>
               <FileName>Controls.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\libs\common\S8-53\Hardware\Controls.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Controls.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\libs\common\S8-53\Hardware\Controls.h</FilePath>
             </File>
             <File>
               <FileName>CPU.cpp</FileName>
@@ -5186,34 +5176,19 @@
               <FilePath>.\src\Hardware\CPU.cpp</FilePath>
             </File>
             <File>
-              <FileName>CPU.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Hardware\CPU.h</FilePath>
-            </File>
-            <File>
-              <FileName>CPU_It.cpp</FileName>
+              <FileName>CPU_IT.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\Hardware\CPU_It.cpp</FilePath>
+              <FilePath>.\src\Hardware\CPU_IT.cpp</FilePath>
             </File>
             <File>
-              <FileName>CPU_Rtc.cpp</FileName>
+              <FileName>CPU_RTC.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\Hardware\CPU_Rtc.cpp</FilePath>
+              <FilePath>.\src\Hardware\CPU_RTC.cpp</FilePath>
             </File>
             <File>
-              <FileName>FLASH.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Hardware\FLASH.h</FilePath>
-            </File>
-            <File>
-              <FileName>FSMC.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Hardware\FSMC.h</FilePath>
-            </File>
-            <File>
-              <FileName>Hardware.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Hardware\Hardware.h</FilePath>
+              <FileName>CPU_VCP.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Hardware\CPU_VCP.cpp</FilePath>
             </File>
             <File>
               <FileName>FLASH.cpp</FileName>
@@ -5236,14 +5211,9 @@
               <FilePath>.\src\Hardware\MSP_USBH.cpp</FilePath>
             </File>
             <File>
-              <FileName>Timer.cpp</FileName>
+              <FileName>Panel.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>..\libs\common\Hardware\Timer.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Timer.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\libs\common\Hardware\Timer.h</FilePath>
+              <FilePath>.\src\Hardware\Panel.cpp</FilePath>
             </File>
             <File>
               <FileName>Sound.cpp</FileName>
@@ -5251,14 +5221,44 @@
               <FilePath>..\libs\common\Hardware\Sound.cpp</FilePath>
             </File>
             <File>
-              <FileName>Sound.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\libs\common\Hardware\Sound.h</FilePath>
+              <FileName>Timer.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\libs\common\Hardware\Timer.cpp</FilePath>
             </File>
             <File>
-              <FileName>Panel.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Hardware\Panel.cpp</FilePath>
+              <FileName>ADC.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Hardware\ADC.h</FilePath>
+            </File>
+            <File>
+              <FileName>Controls.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\libs\common\S8-53\Hardware\Controls.h</FilePath>
+            </File>
+            <File>
+              <FileName>CPU.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Hardware\CPU.h</FilePath>
+            </File>
+            <File>
+              <FileName>CPU_VCP.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Hardware\CPU_VCP.h</FilePath>
+            </File>
+            <File>
+              <FileName>FLASH.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Hardware\FLASH.h</FilePath>
+            </File>
+            <File>
+              <FileName>FSMC.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Hardware\FSMC.h</FilePath>
+            </File>
+            <File>
+              <FileName>Hardware.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Hardware\Hardware.h</FilePath>
             </File>
             <File>
               <FileName>Panel.h</FileName>
@@ -5266,69 +5266,14 @@
               <FilePath>.\src\Hardware\Panel.h</FilePath>
             </File>
             <File>
-              <FileName>PanelFunctions.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Hardware\PanelFunctions.cpp</FilePath>
-              <FileOption>
-                <CommonProperty>
-                  <UseCPPCompiler>2</UseCPPCompiler>
-                  <RVCTCodeConst>0</RVCTCodeConst>
-                  <RVCTZI>0</RVCTZI>
-                  <RVCTOtherData>0</RVCTOtherData>
-                  <ModuleSelection>0</ModuleSelection>
-                  <IncludeInBuild>0</IncludeInBuild>
-                  <AlwaysBuild>0</AlwaysBuild>
-                  <GenerateAssemblyFile>2</GenerateAssemblyFile>
-                  <AssembleAssemblyFile>2</AssembleAssemblyFile>
-                  <PublicsOnly>2</PublicsOnly>
-                  <StopOnExitCode>11</StopOnExitCode>
-                  <CustomArgument></CustomArgument>
-                  <IncludeLibraryModules></IncludeLibraryModules>
-                  <ComprImg>1</ComprImg>
-                </CommonProperty>
-                <FileArmAds>
-                  <Cads>
-                    <interw>2</interw>
-                    <Optim>0</Optim>
-                    <oTime>2</oTime>
-                    <SplitLS>2</SplitLS>
-                    <OneElfS>2</OneElfS>
-                    <Strict>2</Strict>
-                    <EnumInt>2</EnumInt>
-                    <PlainCh>2</PlainCh>
-                    <Ropi>2</Ropi>
-                    <Rwpi>2</Rwpi>
-                    <wLevel>0</wLevel>
-                    <uThumb>2</uThumb>
-                    <uSurpInc>2</uSurpInc>
-                    <uC99>2</uC99>
-                    <useXO>2</useXO>
-                    <v6Lang>0</v6Lang>
-                    <v6LangP>0</v6LangP>
-                    <vShortEn>2</vShortEn>
-                    <vShortWch>2</vShortWch>
-                    <v6Lto>2</v6Lto>
-                    <v6WtE>2</v6WtE>
-                    <v6Rtti>2</v6Rtti>
-                    <VariousControls>
-                      <MiscControls></MiscControls>
-                      <Define></Define>
-                      <Undefine></Undefine>
-                      <IncludePath></IncludePath>
-                    </VariousControls>
-                  </Cads>
-                </FileArmAds>
-              </FileOption>
-            </File>
-            <File>
-              <FileName>CPU_VCP.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Hardware\CPU_VCP.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>CPU_VCP.h</FileName>
+              <FileName>Sound.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\src\Hardware\CPU_VCP.h</FilePath>
+              <FilePath>..\libs\common\Hardware\Sound.h</FilePath>
+            </File>
+            <File>
+              <FileName>Timer.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\libs\common\Hardware\Timer.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -5341,9 +5286,9 @@
               <FilePath>..\libs\common\Hardware\stm32\stm32.cpp</FilePath>
             </File>
             <File>
-              <FileName>stm32.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\libs\common\Hardware\stm32\stm32.h</FilePath>
+              <FileName>stm32_it.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\libs\common\Hardware\stm32\stm32_it.cpp</FilePath>
             </File>
             <File>
               <FileName>stm207.cpp</FileName>
@@ -5351,19 +5296,19 @@
               <FilePath>..\libs\common\Hardware\stm32\207\stm207.cpp</FilePath>
             </File>
             <File>
-              <FileName>stm207.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\libs\common\Hardware\stm32\207\stm207.h</FilePath>
-            </File>
-            <File>
-              <FileName>stm32_it.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\libs\common\Hardware\stm32\stm32_it.cpp</FilePath>
-            </File>
-            <File>
               <FileName>Timer2XX.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\libs\common\Hardware\stm32\2XX\Timer2XX.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>stm32.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\libs\common\Hardware\stm32\stm32.h</FilePath>
+            </File>
+            <File>
+              <FileName>stm207.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\libs\common\Hardware\stm32\207\stm207.h</FilePath>
             </File>
             <File>
               <FileName>Timer2XX.h</FileName>
