--- a/sources/_VS/Device53/Device53.vcxproj
+++ b/sources/_VS/Device53/Device53.vcxproj
@@ -81,7 +81,6 @@
       <PreprocessorDefinitions>USE_HAL_DRIVER;STM32F207xx;S8_53;USBD_LPM_ENABLED=0;MSVC</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
       <DisableSpecificWarnings>4068;4131;4201;4310;4514;4365;4548;4774;4820;5039</DisableSpecificWarnings>
-      <AdditionalOptions>-MP %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <TargetMachine>MachineARM</TargetMachine>
@@ -124,6 +123,8 @@
     <ClCompile Include="..\..\Device53\src\globals.cpp" />
     <ClCompile Include="..\..\Device53\src\Hardware\CPU.cpp" />
     <ClCompile Include="..\..\Device53\src\Hardware\CPU_ADC.cpp" />
+    <ClCompile Include="..\..\Device53\src\Hardware\CPU_FLASH.cpp" />
+    <ClCompile Include="..\..\Device53\src\Hardware\CPU_FSMC.cpp" />
     <ClCompile Include="..\..\Device53\src\Hardware\CPU_IT.cpp" />
     <ClCompile Include="..\..\Device53\src\Hardware\CPU_RTC.cpp" />
     <ClCompile Include="..\..\Device53\src\Hardware\CPU_VCP.cpp" />
@@ -179,8 +180,6 @@
     <ClCompile Include="..\..\Device53\src\FPGA\FPGA.cpp" />
     <ClCompile Include="..\..\Device53\src\FPGA\FPGACalibration.cpp" />
     <ClCompile Include="..\..\Device53\src\FPGA\FPGASettings.cpp" />
-    <ClCompile Include="..\..\Device53\src\Hardware\FLASH.cpp" />
-    <ClCompile Include="..\..\Device53\src\Hardware\FSMC.cpp" />
     <ClCompile Include="..\..\Device53\src\Hardware\Hardware.cpp" />
     <ClCompile Include="..\..\Device53\src\Hardware\MSP_USBH.cpp" />
     <ClCompile Include="..\..\Device53\src\main.cpp" />
@@ -496,8 +495,6 @@
     <ClInclude Include="..\..\Device53\src\FPGA\DataStorage.h" />
     <ClInclude Include="..\..\Device53\src\FPGA\FPGA.h" />
     <ClInclude Include="..\..\Device53\src\FPGA\FPGATypes.h" />
-    <ClInclude Include="..\..\Device53\src\Hardware\FLASH.h" />
-    <ClInclude Include="..\..\Device53\src\Hardware\FSMC.h" />
     <ClInclude Include="..\..\Device53\src\Hardware\Hardware.h" />
     <ClInclude Include="..\..\Device53\src\main.h" />
     <ClInclude Include="..\..\Device53\src\Menu\MenuPagesNames.h" />
