--- a/sources/Device53/Device53.uvprojx
+++ b/sources/Device53/Device53.uvprojx
@@ -5191,11 +5191,6 @@
               <FilePath>.\src\Hardware\CPU_RTC.cpp</FilePath>
             </File>
             <File>
-              <FileName>CPU_VCP.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Hardware\CPU_VCP.cpp</FilePath>
-            </File>
-            <File>
               <FileName>Panel.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Hardware\Panel.cpp</FilePath>
@@ -5221,11 +5216,6 @@
               <FilePath>.\src\Hardware\CPU.h</FilePath>
             </File>
             <File>
-              <FileName>CPU_VCP.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Hardware\CPU_VCP.h</FilePath>
-            </File>
-            <File>
               <FileName>Panel.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Hardware\Panel.h</FilePath>
@@ -5239,6 +5229,16 @@
               <FileName>Timer.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\libs\common\Hardware\Timer.h</FilePath>
+            </File>
+            <File>
+              <FileName>VCP.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Hardware\VCP.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>VCP.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Hardware\VCP.h</FilePath>
             </File>
           </Files>
         </Group>
