--- a/sources/Loader53/Loader53.uvprojx
+++ b/sources/Loader53/Loader53.uvprojx
@@ -2372,16 +2372,6 @@
               <FilePath>.\src\Hardware\stm32f2xx_it.h</FilePath>
             </File>
             <File>
-              <FileName>Controls.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\libs\common\S8-53\Hardware\Controls.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Controls.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\libs\common\S8-53\Hardware\Controls.h</FilePath>
-            </File>
-            <File>
               <FileName>CPU.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Hardware\CPU.cpp</FilePath>
@@ -2400,6 +2390,21 @@
               <FileName>VCP.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\libs\common\Hardware\VCP.h</FilePath>
+            </File>
+            <File>
+              <FileName>Controls.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Hardware\Controls.h</FilePath>
+            </File>
+            <File>
+              <FileName>Controls53.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\libs\common\Hardware\Controls\Controls53.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Controls53.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\libs\common\Hardware\Controls\Controls53.h</FilePath>
             </File>
           </Files>
         </Group>
