--- a/sources/_VS/Device53/Device53.vcxproj.filters
+++ b/sources/_VS/Device53/Device53.vcxproj.filters
@@ -465,9 +465,6 @@
     <ClCompile Include="..\..\libs\common\Hardware\stm32\stm32.cpp">
       <Filter>Hardware\stm32</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\libs\common\Hardware\stm32\207\stm207.cpp">
-      <Filter>Hardware\stm32</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Device53\src\Hardware\CPU.cpp">
       <Filter>Hardware</Filter>
     </ClCompile>
@@ -542,6 +539,9 @@
     </ClCompile>
     <ClCompile Include="..\..\libs\common\Hardware\Controls\Controls53.cpp">
       <Filter>Hardware</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\libs\common\Hardware\stm32\2XX\stm207.cpp">
+      <Filter>Hardware\stm32</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -866,9 +866,6 @@
     <ClInclude Include="..\..\libs\common\Hardware\stm32\stm32.h">
       <Filter>Hardware\stm32</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\libs\common\Hardware\stm32\207\stm207.h">
-      <Filter>Hardware\stm32</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Device53\src\Hardware\CPU.h">
       <Filter>Hardware</Filter>
     </ClInclude>
@@ -976,6 +973,9 @@
     </ClInclude>
     <ClInclude Include="..\..\libs\common\Hardware\Controls\Controls53.h">
       <Filter>Hardware</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\Hardware\stm32\2XX\stm207.h">
+      <Filter>Hardware\stm32</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
