--- a/sources/Device53/Device53.uvprojx
+++ b/sources/Device53/Device53.uvprojx
@@ -5261,11 +5261,6 @@
               <FilePath>..\libs\common\Hardware\stm32\stm32_it.cpp</FilePath>
             </File>
             <File>
-              <FileName>stm207.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\libs\common\Hardware\stm32\207\stm207.cpp</FilePath>
-            </File>
-            <File>
               <FileName>Timer2XX.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\libs\common\Hardware\stm32\2XX\Timer2XX.cpp</FilePath>
@@ -5276,14 +5271,19 @@
               <FilePath>..\libs\common\Hardware\stm32\stm32.h</FilePath>
             </File>
             <File>
-              <FileName>stm207.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\libs\common\Hardware\stm32\207\stm207.h</FilePath>
-            </File>
-            <File>
               <FileName>Timer2XX.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\libs\common\Hardware\stm32\2XX\Timer2XX.h</FilePath>
+            </File>
+            <File>
+              <FileName>stm207.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\libs\common\Hardware\stm32\2XX\stm207.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>stm207.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\libs\common\Hardware\stm32\2XX\stm207.h</FilePath>
             </File>
           </Files>
         </Group>
