--- a/sources/_VS/Device53/Device53.vcxproj
+++ b/sources/_VS/Device53/Device53.vcxproj
@@ -148,7 +148,7 @@
     <ClCompile Include="..\..\libs\common\FPGA\FPGAMath.cpp" />
     <ClCompile Include="..\..\libs\common\Hardware\Controls\Controls53.cpp" />
     <ClCompile Include="..\..\libs\common\Hardware\Sound.cpp" />
-    <ClCompile Include="..\..\libs\common\Hardware\stm32\207\stm207.cpp" />
+    <ClCompile Include="..\..\libs\common\Hardware\stm32\2XX\stm207.cpp" />
     <ClCompile Include="..\..\libs\common\Hardware\stm32\2XX\Timer2XX.cpp" />
     <ClCompile Include="..\..\libs\common\Hardware\stm32\stm32.cpp" />
     <ClCompile Include="..\..\libs\common\Hardware\Timer.cpp" />
@@ -465,7 +465,7 @@
     <ClInclude Include="..\..\libs\common\FPGA\FPGAMath.h" />
     <ClInclude Include="..\..\libs\common\Hardware\Controls\Controls53.h" />
     <ClInclude Include="..\..\libs\common\Hardware\Sound.h" />
-    <ClInclude Include="..\..\libs\common\Hardware\stm32\207\stm207.h" />
+    <ClInclude Include="..\..\libs\common\Hardware\stm32\2XX\stm207.h" />
     <ClInclude Include="..\..\libs\common\Hardware\stm32\2XX\Timer2XX.h" />
     <ClInclude Include="..\..\libs\common\Hardware\stm32\stm32.h" />
     <ClInclude Include="..\..\libs\common\Hardware\Timer.h" />
