--- a/sources/Device53/Device53.uvprojx
+++ b/sources/Device53/Device53.uvprojx
@@ -5320,6 +5320,11 @@
               <FileType>8</FileType>
               <FilePath>..\libs\common\Menu\MenuItemsLogic.cpp</FilePath>
             </File>
+            <File>
+              <FileName>MenuPagesNames.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\MenuPagesNames.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
