--- a/sources/fonts/SG Bitmap Font Editor/SGFED.ini
+++ b/sources/fonts/SG Bitmap Font Editor/SGFED.ini
@@ -6,8 +6,8 @@ Edit Pencil Mode=0
 Edit Plane Mode=3
 Zoom Factor=9
 Zoom Factor (test)=4
-Main Window Pos=GHAAAAAACDCAAAAACGFAAAAAEDFAAAAA
-Main Window Mode=1
+Main Window Pos=MPPPPPPPMPPPPPPPEJGAAAAACAEAAAAA
+Main Window Mode=3
 Main Window Splitter=9
 Big Grid Color=16711680
 Small Grid Color=8454016
@@ -43,11 +43,11 @@ Bar#0=0
 Bar#1=59392
 Bar#2=0
 [Recent File List]
-File1=D:\Projects\stm32\S8-54\sources\fonts\Font8.sgfnt
-File2=D:\Projects\stm32\S8-53\sources\fonts\Font8.sgfnt
-File3=E:\Sasha\Projects\OSCI\sources\fonts\Font8.sgfnt
-File4=E:\Sasha\Projects\OSCI\sources\fonts\FontUGO.sgfnt
-File5=E:\Sasha\Projects\Sever\source\Cube\fonts\Font8.sgfnt
-File6=z:\Cube\fonts\FontUGO2.sgfnt
-File7=z:\Cube\fonts\Font8.sgfnt
-File8=z:\Cube\fonts\FontUGO.sgfnt
+File1=D:\Projects\Archiv\_S8-53\S8-53_new\sources\S8-53\fonts\FontUGO2.sgfnt
+File2=D:\Projects\Archiv\_S8-53\S8-53_new\sources\S8-53\fonts\FontUGO.sgfnt
+File3=D:\Projects\Archiv\_S8-53\S8-53_new\sources\fonts\FontUGO.sgfnt
+File4=D:\Projects\Archiv\_S8-53\S8-53_new\sources\fonts\Font8.sgfnt
+File5=D:\Projects\Archiv\_S8-53\S8-53_new\sources\fonts\Font5.sgfnt
+File6=D:\Projects\Archiv\_S8-53\S8-53_new\sources\fonts\FontUGO2.sgfnt
+File7=D:\Projects\stm32\S8-54\sources\fonts\Font8.sgfnt
+File8=D:\Projects\stm32\S8-53\sources\fonts\Font8.sgfnt
